--- a/arch/arm/src/lpc43xx/Kconfig
+++ b/arch/arm/src/lpc43xx/Kconfig
@@ -252,6 +252,7 @@ config LPC43_SDMMC
 	bool "SD/MMC"
 	default n
         select ARCH_HAVE_SDIO
+        select SDIO_PREFLIGHT
 
 config LPC43_SPI
 	bool "SPI"
