Remove not used functions from lpc43_sdmmc.c and add SETUP DMA before Write

--- a/arch/arm/src/lpc43xx/Kconfig
+++ b/arch/arm/src/lpc43xx/Kconfig
@@ -502,6 +502,7 @@ menu "SDIO Configuration"
 config SDIO_DMA
         bool "Support DMA data transfers"
         default y
+	select SDIO_SETUP_DMA_BEFORE_WRITE
         ---help---
                 Support DMA data transfers.
 
